Fixed navigation margin on mobile

--- a/_assets/stylesheets/application.scss
+++ b/_assets/stylesheets/application.scss
@@ -101,10 +101,10 @@
 // Navigation
 .nav {
     text-align: center;
-    margin: 20px 0 0 32px;
+    margin: 20px 0 0;
 
     @media (min-width: 1024px) {
-        margin: 0;
+        margin: 0 0 0 32px;
         text-align: left;
     }
 }
